<resources>
    <string name="app_name">Age Verified Delivery Sample</string>

    <string name="toolbar_title">Delivery #0001</string>

    <string name="scan_hint_driver_license_viz">Align front of license</string>
    <string name="scan_hint_driver_license_barcode">Align back of license</string>
    <string name="scan_hint_passport_mrz">Align character strip</string>
    <string name="scan_hint_military_id">Scan barcode on the back of the card</string>
    <string name="enter_manually_delayed_hint">Can\'t scan? Enter manually</string>
    <string name="scan_driver_license">Driver\'s License</string>
    <string name="scan_passport">Passport</string>
    <string name="scan_military_id">Military ID</string>
    <string name="scan_startup_hint">Choose document and start scanning</string>

    <string name="barcode_not_supported_title">Verification failed</string>
    <string name="barcode_not_supported_explanation">Barcode cannot be parsed</string>
    <string name="barcode_not_supported_action_capture_front">Scan front of document</string>
    <string name="barcode_not_supported_action_retry">Retry</string>

    <string name="id_localized_but_not_captured_title">Verification failed</string>
    <string name="id_localized_but_not_captured_explanation">Document cannot be parsed</string>
    <string name="id_localized_but_not_captured_action_enter_manually">Enter manually</string>
    <string name="id_localized_but_not_captured_action_retry">Retry</string>

    <string name="result_success_title">Verification successful</string>
    <string name="result_success_confirm_delivery_hint">Confirm delivery to proceed</string>
    <string name="result_success_action_confirm_delivery">Confirm delivery</string>
    <string name="result_failed_title">Verification failed</string>
    <string name="result_failed_reason_document_expired">Document expired</string>
    <string name="result_failed_reason_recipient_under_age">The recipient is under age</string>
    <string name="result_failed_action_refuse_delivery">Refuse delivery</string>
    <string name="result_failed_action_retry">Retry</string>

    <string name="manual_entry_date_of_birth_label">Date of birth:</string>
    <string name="manual_entry_full_name_label">Full name:</string>
    <string name="manual_entry_date_of_expiry_label">Date of expiry:</string>
    <string name="manual_entry_date_of_birth_hint">MM/DD/YYYY</string>
    <string name="manual_entry_full_name_hint">First &amp; last name</string>
    <string name="manual_entry_date_of_expiry_hint">MM/DD/YYYY</string>
    <string name="manual_entry_action_confirm">Confirm</string>
</resources>
